--- a/testZip.Service/testZip.Service.csproj
+++ b/testZip.Service/testZip.Service.csproj
@@ -48,7 +48,6 @@
     <Compile Include="IBlobService.cs" />
     <Compile Include="IProductService.cs" />
     <Compile Include="IZipService.cs" />
-    <Compile Include="Product.cs" />
     <Compile Include="ProductPictureType.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\testZip.Entity\testZip.Entity.csproj">
+      <Project>{b6001758-1917-479f-bbec-c98d857b948f}</Project>
+      <Name>testZip.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
