--- a/testZip/Web.config
+++ b/testZip/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-testZip-20150723105103.mdf;Initial Catalog=aspnet-testZip-20150723105103;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CarrefourCMSEntities" connectionString="Data Source=CASH-PC\SQLEXPRESS;Initial Catalog=CarrefourCMS;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
